Fix compact error code handling due to cache pressure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines
    • Fully Compatible
    • ALL
    • 2024-04-02 - GreatMugshot
    • 35
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The test invalid_system_views.js does not handle the error case of "compact interrupted due to cache pressure" when calling the compact command. Update the command error handling to accept this return code, as it's a valid case.

            Assignee:
            Sean Watt
            Reporter:
            Sean Watt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: