SERVER-88253 Fix compact error code handling due to cache pressure (#20186)

GitOrigin-RevId: 755de3336b85fee95d97aee2aace486ec2a87d9f